--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 Flask
 PyPDF2
+gunicorn==23.0.0
 adblockparser==0.7
 aesedb==0.1.3
 aiocmd==0.1.2
@@ -15,7 +16,7 @@ aiosmb==0.4.4
 aiosqlite==0.20.0
 aiowinreg==0.0.7
 ajpy==0.0.5
-alembic==1.13.2.dev0
+alembic==1.13.2
 altgraph==0.17.4
 amqp==5.2.0
 aniso8601==9.0.1
